apps/mongodb/overlays/prod/ubuntu.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubuntu
  namespace: mongodb
spec:
  replicas: 1  # Number of desired pods
  selector:
    matchLabels:
      app: ubuntu
  template:
    metadata:
      labels:
        app: ubuntu
    spec:
      containers:
      - name: ubuntu
        image: ubuntu:latest  # Use the latest Ubuntu image
        command: ["/bin/bash", "-c", "--"] # Keep the container running
        args: ["while true; do sleep 30; done;"] 
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
